feat: translate new object expressions and fix executable generation